IVYPORTAL-10245 Portal User Example Guide - UI bug not show full on mobile

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -4651,13 +4651,13 @@ clear: both;
 }
 .process-overview-layout-content{
 overflow-y:auto;
-height:95%;	
+height:85%;	
 }
 .case-map-detail-layout-content{
 overflow-y:auto;
-height:95%;	
+height:85%;	
 }
 .case-map-overview-layout-content{
 overflow-y:auto;
-height:95%;	
+height:85%;	
 }
